--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Alex Gilev",
-            "email": "zuxobot@yandex.ru",
+            "name": "Vladimir Kazakov",
+            "email": "belsynth@gmail.com",
         }
     ],
     "bin": [
