--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Vladimir Kazakov",
-            "email": "belsynth@gmail.com",
+            "name": "Nullls",
+            "email": "zuxobot@yandex.ru"
         }
     ],
     "bin": [
